--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h1>Coleta de dados: Contrato de Locação de Imóvel</h1>
   <form id="formContrato">
     <fieldset>
-      <b><legend>Dados do Vendedor (a)</legend></b>
+      <b><legend>Dados do Locador (a)</legend></b>
       <label>Nome: <input type="text" id="nomeLocador" required autocomplete="off"></label><br>
       <label>CPF: <input type="text" id="cpfLocador" required autocomplete="off"></label><br>
       <label>Endereço: <input type="text" id="enderecoLocador" required autocomplete="off"></label>
@@ -25,7 +25,7 @@
     </fieldset>
 
     <fieldset>
-      <b><legend>Dados do Comprador (a)</legend></b>
+      <b><legend>Dados do Locatário (a)</legend></b>
       <label>Nome: <input type="text" id="nomeLocatario" required autocomplete="off"></label><br>
       <label>CPF: <input type="text" id="cpfLocatario" required autocomplete="off"></label><br>
       <label>Endereço: <input type="text" id="enderecoLocatario" required autocomplete="off"></label>
